--- a/po/nl.po
+++ b/po/nl.po
@@ -1,26 +1,23 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Dutch translation of the thunar svn plugin.
+# Copyright (C) 2007 Peter de Ridder
+# This file is distributed under the same license as the thunar-svn-plugin package.
+# Peter de Ridder <peter@xfce.org>, 2007.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: thunar-svn-plugin\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-24 23:15+0100\n"
-"PO-Revision-Date: 2007-10-26 15:12+0500\n"
-"Last-Translator: Muhammad Ali Makki <makk.ma@gmail.com>\n"
-"Language-Team: Urdu <makki.ma@gmail.com>\n"
+"PO-Revision-Date: 2007-12-24 23:30+0100\n"
+"Last-Translator: Peter de Ridder <peter@xfce.org>\n"
+"Language-Team: Dutch <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Urdu\n"
-"X-Poedit-Country: PAKISTAN\n"
-"X-Poedit-SourceCharset: utf-8\n"
 
 #: thunar-svn-plugin/tsp-provider.c:402
 msgid "SVN _Import"
-msgstr "SVN _درآمد"
+msgstr "SVN _Importeren"
 
 #. append the svn submenu action
 #: thunar-svn-plugin/tsp-provider.c:409 thunar-svn-plugin/tsp-provider.c:444
@@ -30,75 +27,75 @@ msgstr "SVN"
 
 #: thunar-svn-plugin/tsp-provider.c:457
 msgid "SVN _Checkout"
-msgstr "SVN _چیک آؤٹ"
+msgstr "SVN _Ophalen"
 
 #: thunar-svn-plugin/tsp-svn-action.c:225
 msgid "Add"
-msgstr "شامل کریں"
+msgstr "Toevoegen"
 
 #: thunar-svn-plugin/tsp-svn-action.c:232
 msgid "Blame"
-msgstr "Blame"
+msgstr "Beschuldigen"
 
 #: thunar-svn-plugin/tsp-svn-action.c:247
 msgid "Cleanup"
-msgstr "صاف کریں"
+msgstr "Opschonen"
 
 #: thunar-svn-plugin/tsp-svn-action.c:254
 msgid "Commit"
-msgstr "تبصرہ"
+msgstr "Versturen"
 
 #: thunar-svn-plugin/tsp-svn-action.c:265
 msgid "Delete"
-msgstr "حذف"
+msgstr "Verwijderen"
 
 #: thunar-svn-plugin/tsp-svn-action.c:272
 msgid "Diff"
-msgstr "فرق"
+msgstr "Verschillen"
 
 #: thunar-svn-plugin/tsp-svn-action.c:279
 msgid "Export"
-msgstr "برآمد"
+msgstr "Exporteren"
 
 #: thunar-svn-plugin/tsp-svn-action.c:290
 msgid "Info"
-msgstr "معلومات"
+msgstr "Informatie"
 
 #: thunar-svn-plugin/tsp-svn-action.c:301
 msgid "Lock"
-msgstr "قفل"
+msgstr "Vast Zetten"
 
 #: thunar-svn-plugin/tsp-svn-action.c:308
 msgid "Log"
-msgstr "Log"
+msgstr "Geschiedenis"
 
 #: thunar-svn-plugin/tsp-svn-action.c:333
 msgid "Edit Properties"
-msgstr "خصوصیات مدون کریں"
+msgstr "Attributen Wijzigen"
 
 #: thunar-svn-plugin/tsp-svn-action.c:342
 msgid "Resolve"
-msgstr "Resolve"
+msgstr "Verhelpen"
 
 #: thunar-svn-plugin/tsp-svn-action.c:349
 msgid "Revert"
-msgstr "واپس"
+msgstr "Terug Halen"
 
 #: thunar-svn-plugin/tsp-svn-action.c:356
 msgid "Status"
-msgstr "حالت"
+msgstr "Status"
 
 #: thunar-svn-plugin/tsp-svn-action.c:363
 msgid "Switch"
-msgstr "تبدیل"
+msgstr "Omschakelen"
 
 #: thunar-svn-plugin/tsp-svn-action.c:370
 msgid "Unlock"
-msgstr "غیر مقفل"
+msgstr "Vrijgeven"
 
 #: thunar-svn-plugin/tsp-svn-action.c:377 tsp-svn-helper/tsh-update.c:105
 msgid "Update"
-msgstr "تجدید"
+msgstr "Bijwerken"
 
 #. Translators: the first string is a path and the second string
 #. * is a hostname. Nautilus and the panel contain the same string
@@ -107,71 +104,71 @@ msgstr "تجدید"
 #: tsp-svn-helper/gtkfilechooserdefault.c:71
 #, c-format
 msgid "%1$s on %2$s"
-msgstr ""
+msgstr "%1$s op %2$s"
 
 #: tsp-svn-helper/gtkfilechooserentry.c:50
 msgid "Select A File"
-msgstr ""
+msgstr "Een bestand selecteren"
 
 #: tsp-svn-helper/gtkfilechooserentry.c:51
 msgid "Desktop"
-msgstr ""
+msgstr "Bureaublad"
 
 #: tsp-svn-helper/gtkfilechooserentry.c:52
 msgid "(None)"
-msgstr ""
+msgstr "(Geen)"
 
 #: tsp-svn-helper/gtkfilechooserentry.c:339
 msgid "Dialog"
-msgstr ""
+msgstr "Dialoogvenster"
 
 #: tsp-svn-helper/gtkfilechooserentry.c:340
 msgid "The file chooser dialog to use."
-msgstr ""
+msgstr "De te gebruiken bestandskiezer."
 
 #: tsp-svn-helper/gtkfilechooserentry.c:356
 msgid "Focus on click"
-msgstr ""
+msgstr "Aandacht bij klikken"
 
 #: tsp-svn-helper/gtkfilechooserentry.c:357
 msgid "Whether the entry grabs focus when it is clicked with the mouse"
-msgstr ""
+msgstr "Of het veld de aandacht krijgt als het met de muis wordt aangeklikt"
 
 #: tsp-svn-helper/gtkfilechooserentry.c:370
 msgid "Title"
-msgstr ""
+msgstr "Titel"
 
 #: tsp-svn-helper/gtkfilechooserentry.c:371
 msgid "The title of the file chooser dialog."
-msgstr ""
+msgstr "De titel van het bestandsselectie-dialoogvenster."
 
 #: tsp-svn-helper/gtkfilechooserentry.c:384
 msgid "Width In Characters"
-msgstr ""
+msgstr "Breedte, in lettertekens"
 
 #: tsp-svn-helper/gtkfilechooserentry.c:385
 msgid "The desired width of the entry widget, in characters."
-msgstr ""
+msgstr "De gewenste breedte van het text-widget, in lettertekens."
 
 #: tsp-svn-helper/gtkfilechooserentry.c:2035
 msgid "Other..."
-msgstr ""
+msgstr "Andere..."
 
 #: tsp-svn-helper/main.c:58
 msgid "Print version information"
-msgstr "ورژن معلومات طبع کریں"
+msgstr "Versie informatie tonen"
 
 #: tsp-svn-helper/main.c:65
 msgid "Execute checkout action"
-msgstr "چیک کریں"
+msgstr "Ophaal actie uitvoeren"
 
 #: tsp-svn-helper/main.c:71
 msgid "Execute update action"
-msgstr "تجدید کریں"
+msgstr "Bijwerk actie uitvoeren"
 
 #: tsp-svn-helper/tsh-checkout.c:94 tsp-svn-helper/tsh-checkout-dialog.c:103
 msgid "Checkout"
-msgstr "چیک کریں"
+msgstr "Ophalen"
 
 #: tsp-svn-helper/tsh-checkout-dialog.c:64
 msgid "_Repository:"
@@ -180,103 +177,102 @@ msgstr ""
 #: tsp-svn-helper/tsh-checkout-dialog.c:71
 #: tsp-svn-helper/tsh-checkout-dialog.c:91
 msgid "Select a folder"
-msgstr ""
+msgstr "Selecteer een map"
 
 #: tsp-svn-helper/tsh-checkout-dialog.c:84
 msgid "_Checkout directory:"
-msgstr ""
+msgstr "_Ophaal map:"
 
 #: tsp-svn-helper/tsh-common.c:448
 msgid "Deleted"
-msgstr "حذف"
+msgstr "Verwijderd"
 
 #: tsp-svn-helper/tsh-common.c:453
 msgid "Added"
-msgstr "شامل کردہ"
+msgstr "Toegevoegd"
 
 #: tsp-svn-helper/tsh-common.c:458
 msgid "Updated"
-msgstr "تجدید شدہ"
+msgstr "Bijgewerkt"
 
 #: tsp-svn-helper/tsh-common.c:462
 #, c-format
 msgid "At revision: %li"
-msgstr "ورژن: %li"
+msgstr "Op versie: %li"
 
 #: tsp-svn-helper/tsh-common.c:464
 msgid "Completed"
-msgstr "مکمل"
+msgstr "Voltooid"
 
 #: tsp-svn-helper/tsh-common.c:469
 msgid "External"
-msgstr "خارجی"
+msgstr "Extern"
 
 #: tsp-svn-helper/tsh-file-dialog.c:60
 msgid "_Certificate:"
-msgstr ""
+msgstr "_Certificaat:"
 
 #: tsp-svn-helper/tsh-file-dialog.c:67
 msgid "Select a file"
-msgstr ""
+msgstr "Selecteer een bestand"
 
 #: tsp-svn-helper/tsh-file-dialog.c:78 tsp-svn-helper/tsh-login-dialog.c:98
 #: tsp-svn-helper/tsh-trust-dialog.c:73
 msgid "Remember"
-msgstr "یاد رکھیں"
+msgstr "Onthouden"
 
 #: tsp-svn-helper/tsh-file-dialog.c:86
-#, fuzzy
 msgid "Certificate"
-msgstr "اطلاعیہ"
+msgstr "Certificaat"
 
 #: tsp-svn-helper/tsh-login-dialog.c:65
 msgid "_Username:"
-msgstr "_صارف نام:"
+msgstr "_Gebruikersnaam:"
 
 #: tsp-svn-helper/tsh-login-dialog.c:81
 msgid "_Password:"
-msgstr "_پاس ورڈ:"
+msgstr "_Wachtwoord:"
 
 #: tsp-svn-helper/tsh-login-dialog.c:106
 msgid "Login"
-msgstr "لاگ ان"
+msgstr "Aanmelden"
 
 #: tsp-svn-helper/tsh-notify-dialog.c:75
 msgid "Action"
-msgstr "حرکت"
+msgstr "Actie"
 
 #: tsp-svn-helper/tsh-notify-dialog.c:81
 msgid "Path"
-msgstr "پاتھ"
+msgstr "Pad"
 
 #: tsp-svn-helper/tsh-notify-dialog.c:87
 msgid "Mime type"
-msgstr "Mime قسم"
+msgstr ""
 
 #: tsp-svn-helper/tsh-notify-dialog.c:102
 msgid "Notification"
-msgstr "اطلاعیہ"
+msgstr "Notificatie"
 
 #: tsp-svn-helper/tsh-trust-dialog.c:58
 msgid "Certificate is not yet valid."
-msgstr ""
+msgstr "Certificaat is nog niet geldig."
 
 #: tsp-svn-helper/tsh-trust-dialog.c:61
 msgid "Certificate has expired."
-msgstr ""
+msgstr "Certificaat is niet meer geldig."
 
 #: tsp-svn-helper/tsh-trust-dialog.c:64
 msgid "Certificate does not match the remote hostname."
-msgstr ""
+msgstr "Certificaat komt niet overeen met hostnaam."
 
 #: tsp-svn-helper/tsh-trust-dialog.c:67
 msgid "Certificate authority is unknown."
-msgstr ""
+msgstr "Certificaat authoriteit is niet bekend."
 
 #: tsp-svn-helper/tsh-trust-dialog.c:70
 msgid "Other failure."
-msgstr ""
+msgstr "Andere fout."
 
 #: tsp-svn-helper/tsh-trust-dialog.c:77
 msgid "Trust"
-msgstr ""
+msgstr "Vertrouwen"
