--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-27  Peter de Ridder <peter@xfce.org>
+
+	* nl.po: Added Dutch translation
+
 2007-12-03  Maximilian Schleiss <maximilian@xfce.org>
 
 	* lv.po: New Latvian translation added 
