--- a/po/fr.po
+++ b/po/fr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce-i 18n\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-01-17 22:09+0100\n"
+"POT-Creation-Date: 2008-03-18 21:25+0100\n"
 "PO-Revision-Date: 2007-10-24 13:04+0100\n"
 "Last-Translator: Mike Massonnet <mmassonnet@gmail.com>\n"
 "Language-Team: French\n"
@@ -28,7 +28,7 @@ msgid "Menu|Add"
 msgstr ""
 
 #: thunar-svn-plugin/tsp-svn-action.c:242 tsp-svn-helper/main.c:207
-#: tsp-svn-helper/tsh-add.c:111
+#: tsp-svn-helper/tsh-add.c:112 tsp-svn-helper/tsh-add.c:125
 msgid "Add"
 msgstr "Ajouter"
 
@@ -67,7 +67,7 @@ msgid "Menu|Commit"
 msgstr "Envoyer"
 
 #: thunar-svn-plugin/tsp-svn-action.c:300 tsp-svn-helper/main.c:219
-#: tsp-svn-helper/tsh-commit.c:123
+#: tsp-svn-helper/tsh-commit.c:124 tsp-svn-helper/tsh-commit.c:137
 msgid "Commit"
 msgstr "Envoyer"
 
@@ -88,7 +88,7 @@ msgid "Menu|Delete"
 msgstr "Effacer"
 
 #: thunar-svn-plugin/tsp-svn-action.c:326 tsp-svn-helper/main.c:227
-#: tsp-svn-helper/tsh-delete.c:123
+#: tsp-svn-helper/tsh-delete.c:124 tsp-svn-helper/tsh-delete.c:137
 msgid "Delete"
 msgstr "Effacer"
 
@@ -197,7 +197,7 @@ msgid "Menu|Revert"
 msgstr "Restaurer"
 
 #: thunar-svn-plugin/tsp-svn-action.c:487 tsp-svn-helper/main.c:259
-#: tsp-svn-helper/tsh-revert.c:109
+#: tsp-svn-helper/tsh-revert.c:110 tsp-svn-helper/tsh-revert.c:123
 msgid "Revert"
 msgstr "Restaurer"
 
@@ -430,52 +430,54 @@ msgid "Execute update action"
 msgstr "Exécuter une mise à jour"
 
 #: tsp-svn-helper/main.c:207
-msgid "Add Related Opions:"
+msgid "Add Related Options:"
 msgstr ""
 
 #: tsp-svn-helper/main.c:211
-msgid "Checkout Related Opions:"
-msgstr ""
+#, fuzzy
+msgid "Checkout Related Options:"
+msgstr "Exécuter une mise à jour"
 
 #: tsp-svn-helper/main.c:215
-msgid "Cleanup Related Opions:"
+msgid "Cleanup Related Options:"
 msgstr ""
 
 #: tsp-svn-helper/main.c:219
-msgid "Commit Related Opions:"
+msgid "Commit Related Options:"
 msgstr ""
 
 #: tsp-svn-helper/main.c:223
-msgid "Copy Related Opions:"
+msgid "Copy Related Options:"
 msgstr ""
 
 #: tsp-svn-helper/main.c:227
-msgid "Delete Related Opions:"
+msgid "Delete Related Options:"
 msgstr ""
 
 #: tsp-svn-helper/main.c:231
-msgid "Export Related Opions:"
+msgid "Export Related Options:"
 msgstr ""
 
 #: tsp-svn-helper/main.c:235
-msgid "Import Related Opions:"
+msgid "Import Related Options:"
 msgstr ""
 
 #: tsp-svn-helper/main.c:239
-msgid "Lock Related Opions:"
+msgid "Lock Related Options:"
 msgstr ""
 
 #: tsp-svn-helper/main.c:243
-msgid "Log Related Opions:"
+msgid "Log Related Options:"
 msgstr ""
 
 #: tsp-svn-helper/main.c:247
-msgid "Move Related Opions:"
+msgid "Move Related Options:"
 msgstr ""
 
 #: tsp-svn-helper/main.c:251
-msgid "Properties Related Opions:"
-msgstr ""
+#, fuzzy
+msgid "Properties Related Options:"
+msgstr "Éditer les propriétés"
 
 #. gtk_box_pack_start (GTK_BOX (GTK_DIALOG (dialog)->action_area), box, FALSE, TRUE, 0);
 #. gtk_widget_show (box);
@@ -485,36 +487,36 @@ msgid "Properties"
 msgstr "Éditer les propriétés"
 
 #: tsp-svn-helper/main.c:255
-msgid "Resolved Related Opions:"
+msgid "Resolved Related Options:"
 msgstr ""
 
 #: tsp-svn-helper/main.c:259
-msgid "Revert Related Opions:"
+msgid "Revert Related Options:"
 msgstr ""
 
 #: tsp-svn-helper/main.c:263
-msgid "Status Related Opions:"
+msgid "Status Related Options:"
 msgstr ""
 
 #: tsp-svn-helper/main.c:267
-msgid "Unlock Related Opions:"
+msgid "Unlock Related Options:"
 msgstr ""
 
 #: tsp-svn-helper/main.c:271
-msgid "Update Related Opions:"
+msgid "Update Related Options:"
 msgstr ""
 
 #: tsp-svn-helper/main.c:317
 msgid "Not enough arguments provided"
 msgstr ""
 
-#: tsp-svn-helper/tsh-add.c:72 tsp-svn-helper/tsh-add.c:88
-#: tsp-svn-helper/tsh-checkout.c:71 tsp-svn-helper/tsh-commit.c:90
-#: tsp-svn-helper/tsh-copy.c:74 tsp-svn-helper/tsh-delete.c:90
+#: tsp-svn-helper/tsh-add.c:73 tsp-svn-helper/tsh-add.c:89
+#: tsp-svn-helper/tsh-checkout.c:71 tsp-svn-helper/tsh-commit.c:91
+#: tsp-svn-helper/tsh-copy.c:74 tsp-svn-helper/tsh-delete.c:91
 #: tsp-svn-helper/tsh-export.c:72 tsp-svn-helper/tsh-import.c:72
 #: tsp-svn-helper/tsh-lock.c:91 tsp-svn-helper/tsh-move.c:72
 #: tsp-svn-helper/tsh-resolved.c:72 tsp-svn-helper/tsh-resolved.c:88
-#: tsp-svn-helper/tsh-revert.c:86 tsp-svn-helper/tsh-unlock.c:86
+#: tsp-svn-helper/tsh-revert.c:87 tsp-svn-helper/tsh-unlock.c:86
 #: tsp-svn-helper/tsh-update.c:88
 msgid "Failed"
 msgstr ""
@@ -533,25 +535,25 @@ msgstr ""
 msgid "Cleaning up ..."
 msgstr "Nettoyer les verrous"
 
-#: tsp-svn-helper/tsh-commit.c:101 tsp-svn-helper/tsh-common.c:640
-#: tsp-svn-helper/tsh-copy.c:85 tsp-svn-helper/tsh-delete.c:101
+#: tsp-svn-helper/tsh-commit.c:102 tsp-svn-helper/tsh-common.c:640
+#: tsp-svn-helper/tsh-copy.c:85 tsp-svn-helper/tsh-delete.c:102
 #: tsp-svn-helper/tsh-import.c:81 tsp-svn-helper/tsh-move.c:83
 #, fuzzy, c-format
 msgid "At revision: %ld"
 msgstr "À la révision : %li"
 
-#: tsp-svn-helper/tsh-commit.c:106
+#: tsp-svn-helper/tsh-commit.c:107
 msgid "Nothing to do"
 msgstr ""
 
-#: tsp-svn-helper/tsh-commit.c:111 tsp-svn-helper/tsh-common.c:462
+#: tsp-svn-helper/tsh-commit.c:112 tsp-svn-helper/tsh-common.c:462
 #: tsp-svn-helper/tsh-common.c:464 tsp-svn-helper/tsh-copy.c:95
-#: tsp-svn-helper/tsh-delete.c:111 tsp-svn-helper/tsh-import.c:85
+#: tsp-svn-helper/tsh-delete.c:112 tsp-svn-helper/tsh-import.c:85
 #: tsp-svn-helper/tsh-move.c:93
 msgid "Completed"
 msgstr "Complété"
 
-#: tsp-svn-helper/tsh-commit.c:128
+#: tsp-svn-helper/tsh-commit.c:142
 #, fuzzy
 msgid "Commit Message"
 msgstr "Envoyer"
@@ -686,11 +688,11 @@ msgstr ""
 msgid "Copy To"
 msgstr ""
 
-#: tsp-svn-helper/tsh-delete.c:106
+#: tsp-svn-helper/tsh-delete.c:107
 msgid "Local delete"
 msgstr ""
 
-#: tsp-svn-helper/tsh-delete.c:128
+#: tsp-svn-helper/tsh-delete.c:142
 #, fuzzy
 msgid "Delete Message"
 msgstr "Envoyer"
