--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-13	Mike Massonnet <mmassonnet@xfce.org>
+
+	* en_GB.po: Update translation (Jeff Bailes)
+
 2007-12-27  Peter de Ridder <peter@xfce.org>
 
 	* nl.po: Added Dutch translation
