--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-14  Og Maciel <ogmaciel@gnome.org>
+
+    * pt_BR.po: Updated Brazilian Portuguese translation
+
 2008-05-13	Mike Massonnet <mmassonnet@xfce.org>
 
 	* en_GB.po: Update translation (Jeff Bailes)
