--- a/po/lv.po
+++ b/po/lv.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: thunar-svn-plugin\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-03-18 21:25+0100\n"
+"POT-Creation-Date: 2008-06-08 16:27+0200\n"
 "PO-Revision-Date: 2007-11-15 21:18+0300\n"
 "Last-Translator: Rihards Priedītis <rprieditis@inbox.lv>\n"
 "Language-Team: Latvian <rprieditis@inbox.lv>\n"
@@ -525,8 +525,9 @@ msgid "Cleanup failed"
 msgstr "Uzkopt"
 
 #: tsp-svn-helper/tsh-cleanup.c:83
-msgid "Cleanup finnished"
-msgstr ""
+#, fuzzy
+msgid "Cleanup finished"
+msgstr "Uzkopt"
 
 #: tsp-svn-helper/tsh-cleanup.c:96
 #, fuzzy
@@ -824,7 +825,7 @@ msgid "Status failed"
 msgstr "Status"
 
 #: tsp-svn-helper/tsh-status-dialog.c:156
-msgid "Show Recusive"
+msgid "Show Recursive"
 msgstr ""
 
 #: tsp-svn-helper/tsh-status-dialog.c:161
