--- a/po/nl.po
+++ b/po/nl.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: thunar-svn-plugin\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-03-18 21:25+0100\n"
-"PO-Revision-Date: 2008-03-18 21:25+0100\n"
+"POT-Creation-Date: 2008-06-08 16:27+0200\n"
+"PO-Revision-Date: 2008-06-08 16:27+0200\n"
 "Last-Translator: Peter de Ridder <peter@xfce.org>\n"
 "Language-Team: Dutch <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -482,7 +482,7 @@ msgid "Cleanup failed"
 msgstr "Opschonen is gefaald"
 
 #: tsp-svn-helper/tsh-cleanup.c:83
-msgid "Cleanup finnished"
+msgid "Cleanup finished"
 msgstr "Klaar met opschonen"
 
 #: tsp-svn-helper/tsh-cleanup.c:96
@@ -757,7 +757,7 @@ msgid "Status failed"
 msgstr "Status gefaald"
 
 #: tsp-svn-helper/tsh-status-dialog.c:156
-msgid "Show Recusive"
+msgid "Show Recursive"
 msgstr "Onderliggende mappen weergeven"
 
 #: tsp-svn-helper/tsh-status-dialog.c:161
