--- a/po/thunar-svn-plugin.pot
+++ b/po/thunar-svn-plugin.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-03-18 21:25+0100\n"
+"POT-Creation-Date: 2008-06-08 16:27+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -483,7 +483,7 @@ msgid "Cleanup failed"
 msgstr ""
 
 #: tsp-svn-helper/tsh-cleanup.c:83
-msgid "Cleanup finnished"
+msgid "Cleanup finished"
 msgstr ""
 
 #: tsp-svn-helper/tsh-cleanup.c:96
@@ -758,7 +758,7 @@ msgid "Status failed"
 msgstr ""
 
 #: tsp-svn-helper/tsh-status-dialog.c:156
-msgid "Show Recusive"
+msgid "Show Recursive"
 msgstr ""
 
 #: tsp-svn-helper/tsh-status-dialog.c:161
