--- a/po/ur.po
+++ b/po/ur.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: thunar-svn-plugin\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-03-18 21:25+0100\n"
+"POT-Creation-Date: 2008-06-08 16:27+0200\n"
 "PO-Revision-Date: 2007-10-26 15:12+0500\n"
 "Last-Translator: Muhammad Ali Makki <makk.ma@gmail.com>\n"
 "Language-Team: Urdu <makki.ma@gmail.com>\n"
@@ -528,8 +528,9 @@ msgid "Cleanup failed"
 msgstr "صاف کریں"
 
 #: tsp-svn-helper/tsh-cleanup.c:83
-msgid "Cleanup finnished"
-msgstr ""
+#, fuzzy
+msgid "Cleanup finished"
+msgstr "صاف کریں"
 
 #: tsp-svn-helper/tsh-cleanup.c:96
 #, fuzzy
@@ -827,7 +828,7 @@ msgid "Status failed"
 msgstr "حالت"
 
 #: tsp-svn-helper/tsh-status-dialog.c:156
-msgid "Show Recusive"
+msgid "Show Recursive"
 msgstr ""
 
 #: tsp-svn-helper/tsh-status-dialog.c:161
