--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-12  Og Maciel <ogmaciel@gnome.org>
+
+    * pt_BR.po: Updated Brazilian Portuguese translation
+
 2008-06-08  Og Maciel <ogmaciel@gnome.org>
 
     * pt_BR.po: Updated Brazilian Portuguese translation
