--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+0.0.2
+=====
+- New Subversion actions have been added: switch, relocate, blame.
+- File selection dialog added for varios Subversion actions.
+
 0.0.1
 =====
 - Initial release of the Thunar SVN Plugin. This version of the Subversion
@@ -5,4 +10,4 @@
   commit, copy, delete, export, import, lock, log, move, properties, resolved,
   revert, status, unlock, update.
 
-# vi:set ts=2 sw=2 et ai nocindent textwidth=80:
+# vi:set ts=2 sw=2 et ai nocindent textwidth=78:
