--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-19 Lars Nielsen <lars@mit-web.dk>
+
+	* da.po,LINGUAS: Added danish translation
+
 2008-07-15 Mohamed Magdy <alnokta@xfce.org>
 
         * ar.po: Add Arabic translation
