Czech translation updated
(Old svn revision: 6028)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-09 Michal Várady <miko.vaji@gmail.com>
+
+	* cs.po: Czech translation updated
+
 2008-10-19 Lars Nielsen <lars@mit-web.dk>
 
 	* da.po,LINGUAS: Added danish translation
