Translations updates for a lot of languages in a lot of packages
(Old svn revision: 6041)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-11-09  Maximilian Schleiss <maximilian@xfce.org>
+
+	* es.po; LINGUAS: Spanish translation added (Abel Martín)
+	* pt_PT.po; LINGUAS: European Portuguese translation added (Nuno Miguel)
+
 2008-11-09 Michal Várady <miko.vaji@gmail.com>
 
 	* cs.po: Czech translation updated
