Czech translation updated
(Old svn revision: 6364)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-22  Michal Várady <miko.vaji@gmail.com>
+
+	* cs.po: Czech translation updated
+
 2008-11-09  Maximilian Schleiss <maximilian@xfce.org>
 
 	* es.po; LINGUAS: Spanish translation added (Abel Martín)
